# predict-to-invest-mlr

notebook-to-pdf-1/: .gitignore  README.md  Test.ipynb  main.py  nb2-pdf-agent.py  pyproject.toml
predict-to-invest-mlr/: 50_startups_dataset.csv  MLR.ipynb  README.md  main.py  pyproject.toml
research-agent-pro-01/: main.py  pyproject.toml
