[project]
name = "notebook-to-pdf-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.1",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "pypdf>=6.9.2",
    "reportlab>=4.4.10",
]
